<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreen"
    android:background="@color/Cream">

    <!-- 1. MAIN CONTENT WINDOW -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- CardView must wrap something, or use layout_height="0dp" with weights -->
        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/Cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Horizontal layout holding your buttons and image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BackText"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:text="@string/backbutton"
                android:textAlignment="center"
                android:textColor="@color/Bright_yellow" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0"
                app:srcCompat="@drawable/house" />

            <ImageButton
                android:id="@+id/Settingsbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/cogicon" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:alpha="0"
            app:srcCompat="@drawable/house" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/Dark_brown"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textAlignment="center"
            android:textColor="@color/Dark_brown"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/Bright_yellow"
            android:text="@string/edit_profile"
            android:textColor="@color/Dark_brown"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_streak"
            android:textAlignment="center"
            android:textColor="@color/Dark_brown"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            android:textAlignment="center"
            android:textColor="@color/Dark_brown"
            android:textSize="24sp" />

    </LinearLayout>

    <!-- 2. OPTIONAL DRAWER MENU (If you want a side menu, it goes here with android:layout_gravity="start") -->

</androidx.drawerlayout.widget.DrawerLayout>