<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EEDF"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/pastel_yellow"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="552dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="330dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/bearicon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="welcome"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:autofillHints="fullname"
                android:background="#72502D"
                android:backgroundTint="#72502D"
                android:ems="10"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/etSEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:autofillHints="fullname"
                android:background="#72502D"
                android:backgroundTint="#72502D"
                android:ems="10"
                android:hint="fullname"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/etSPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:autofillHints="password"
                android:background="#72502D"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/etSConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnSigned"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/Gray_brown"
                android:text="@string/signed"
                android:textAlignment="center"
                android:textColor="#F8B510"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRedirectLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account_login"
                android:textColor="#F8B510"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>