<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarryCareScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="503dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ProfileBtn"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Button" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0"
                    app:srcCompat="@drawable/house" />

                <ImageButton
                    android:id="@+id/Settingbtnprf"
                    android:layout_width="226dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cogicon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hunger"
                    android:textSize="34sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barry"
                android:textAlignment="center"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:layout_gravity="bottom"
                android:foregroundGravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/Addbtn"
                android:layout_width="77dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:background="#f2c560"
                android:text="@string/plus"
                android:textColorLink="#f2c560"
                android:textSize="40dp"
                app:iconSize="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/Homebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#725030"
                    app:srcCompat="@drawable/houseicon" />

                <ImageButton
                    android:id="@+id/Barrybtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#725030"
                    app:srcCompat="@drawable/bearicon" />

                <ImageButton
                    android:id="@+id/Analyticsbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#725030"
                    app:srcCompat="@drawable/analyticsicon" />

            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>
</androidx.drawerlayout.widget.DrawerLayout>